@@ -46,7 +46,7 @@ public:
     void clear();
     QString activeFsDeviceUdi() const;
     QList<Song> selectedSongs() const;
-    void setView(bool tree) { view->setMode(tree ? ItemView::Mode_Tree : ItemView::Mode_List); }
+    void setView(int v) { view->setMode((ItemView::Mode)v); }
     void focusSearch() { view->focusSearch(); }
     void goBack() { view->backActivated(); }
 
