@@ -55,6 +55,8 @@
     working).
 32. Only stop dynamizer on exit if option enabled, not if just stop playback on
     exit is enabled.
+33. Add a new view style - 'Detailed Tree'. This uses the list-style appearance
+    for treeviews - e.g. The album count appears under each artist, etc.
 
 0.9.2
 -----
